ORC-2053: Use Java `Set.of` instead of `Collections.emptySet`
### What changes were proposed in this pull request?

This PR aims to use Java 9+ `Set.of()` API instead of `Collections.emptySet()` and add a new checkstyle rule to ban `Collections.emptySet`.

### Why are the changes needed?

We had better use `Set` simply and uniformly.

```java
- import java.util.Collections;
...
- private Set<Integer> filterColumnIds = Collections.emptySet();
+ private Set<Integer> filterColumnIds = Set.of();
```

### Does this PR introduce _any_ user-facing change?

No behavior change.

### How was this patch tested?

Pass the CIs.

### Was this patch authored or co-authored using generative AI tooling?

No.

Closes #2476 from dongjoon-hyun/ORC-2053.

Authored-by: Dongjoon Hyun <dongjoon@apache.org>
Signed-off-by: Dongjoon Hyun <dongjoon@apache.org>